implementations of chen's algorithms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ add_subdirectory (algorithm)
 add_subdirectory (network)
 add_subdirectory (sttree)
 add_subdirectory (statistics)
+add_subdirectory (mpp_algorithms)
 
 INSTALL (FILES CMakeLists.txt DESTINATION .)
 INSTALL (DIRECTORY include lib DESTINATION .)
