Chen's directory configurations

--- a/mpp_algorithms/Chen2000/CMakeLists.txt
+++ b/mpp_algorithms/Chen2000/CMakeLists.txt
@@ -1,1 +1,16 @@
 cmake_minimum_required (VERSION 2.8.7)
+
+SET(CPACK_SOURCE_IGNORE_FILES 
+CMakeFiles;
+CPack*;
+cmake_install*;
+CMakeCache*;
+)
+
+FILE (GLOB SRCS "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
+FILE (GLOB includes "${PROJECT_SOURCE_DIR}/include/*.h")
+
+add_executable (lowerbound lowerbound.cpp ${includes})
+target_link_libraries (lowerbound graph )
+
+
