--- a/mpp_algorithms/CMakeLists.txt
+++ b/mpp_algorithms/CMakeLists.txt
@@ -1,4 +1,10 @@
 cmake_minimum_required (VERSION 2.8.7)
 
+SET(CPACK_SOURCE_IGNORE_FILES 
+CMakeFiles;
+CPack*;
+cmake_install*;
+CMakeCache*;
+)
 
 add_subdirectory (Chen2000)
