graphcut algorithm for math model added

--- a/mpp_algorithms/Chen2000/CMakeLists.txt
+++ b/mpp_algorithms/Chen2000/CMakeLists.txt
@@ -11,6 +11,9 @@ FILE (GLOB SRCS "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
 FILE (GLOB includes "${PROJECT_SOURCE_DIR}/include/*.h")
 
 add_executable (lowerbound lowerbound.cpp ${includes})
+add_executable (graphcuts graphcut.cpp ${includes})
+
 target_link_libraries (lowerbound graph)
+target_link_libraries (graphcuts graph)
 
 
