filter to exact solutions

--- a/mpp_algorithms/Chen2000/CMakeLists.txt
+++ b/mpp_algorithms/Chen2000/CMakeLists.txt
@@ -16,3 +16,6 @@ target_link_libraries (lowerbound graph)
 add_executable (datagen datagenerator.cpp ${includes})
 target_link_libraries (datagen graph)
 
+add_executable (filter_sol filter.cpp ${includes})
+target_link_libraries (filter_sol graph)
+
