--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -13,3 +13,6 @@ FILE(GLOB HDRS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
 add_library (myutil STATIC ${SRC})
 
 INSTALL (FILES ${SRC} ${HDRS} CMakeLists.txt DESTINATION myutil)
+
+add_executable (teste mystringtest.cpp ${includes})
+target_link_libraries (teste myutil)
