get_instance_name add to mystring.h

--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -8,11 +8,13 @@ CMakeCache*;
 )
 
 FILE(GLOB SRC "${CMAKE_CURRENT_SOURCE_DIR}/*.cc")
-FILE(GLOB HDRS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+FILE(GLOB HDRS "${PROJECT_SOURCE_DIR}/include/*.h")
 
 add_library (myutil STATIC ${SRC})
 
+add_executable (teste mystringtest.cpp ${HDRS})
+target_link_libraries (teste myutil)
+
 INSTALL (FILES ${SRC} ${HDRS} CMakeLists.txt DESTINATION myutil)
 
-add_executable (teste mystringtest.cpp ${includes})
-target_link_libraries (teste myutil)
+
