chentest has been fixed

--- a/mpp_algorithms/Chen2000/CMakeLists.txt
+++ b/mpp_algorithms/Chen2000/CMakeLists.txt
@@ -7,8 +7,11 @@ cmake_install*;
 CMakeCache*;
 )
 
+#enable_testing ();
+
 FILE (GLOB SRCS "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
 FILE (GLOB includes "${PROJECT_SOURCE_DIR}/include/*.h")
+FILE (GLOB HDRS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
 
 add_executable (lowerbound lowerbound.cpp ${includes})
 target_link_libraries (lowerbound graph)
@@ -18,4 +21,9 @@ target_link_libraries (datagen graph)
 
 add_executable (filter_sol filter.cpp ${includes})
 target_link_libraries (filter_sol graph)
+
+add_executable (chentest chentest.cpp chenalgorithm.h chenalgorithm.cpp)
+
+#adicionando teste
+#add_test (inicializacao )
 
