--- a/mpp_algorithms/myalgorithm/CMakeLists.txt
+++ b/mpp_algorithms/myalgorithm/CMakeLists.txt
@@ -16,4 +16,6 @@ target_link_libraries (mppalgorithm graph)
 
 add_executable (main_strategy main_strategy.cpp 
 		strategy_make_tree.cpp strategy_make_tree.h)
+		
+add_executable (steinertest steiner_test.cpp)
 
