steiner tree prunnig is not working..

--- a/mpp_algorithms/myalgorithm/CMakeLists.txt
+++ b/mpp_algorithms/myalgorithm/CMakeLists.txt
@@ -18,5 +18,5 @@ add_executable (main_strategy main_strategy.cpp
 		strategy_make_tree.cpp strategy_make_tree.h)
 		
 add_executable (steinertest steiner_test.cpp ${includes})
-target_link_libraries (steinertest graph)
+target_link_libraries (steinertest graph sttree)
 
