--- a/mpp_algorithms/myalgorithm/CMakeLists.txt
+++ b/mpp_algorithms/myalgorithm/CMakeLists.txt
@@ -15,10 +15,16 @@ add_executable (mppalgorithm mppalgorithm.cpp main.cpp mppalgorithm.h ${includes
 target_link_libraries (mppalgorithm graph)
 
 add_executable (main_strategy main_strategy.cpp 
-		strategy_make_tree.cpp strategy_make_tree.h ${includes})
-		
-target_link_libraries (main_strategy sttree)
+		strategy_make_tree.cpp strategy_make_tree.h
+		naiveshortestpath.h naiveshortestpath.cpp 
+		${includes})
+target_link_libraries (main_strategy sttree graph)
 		
 add_executable (steinertest steiner_test.cpp ${includes})
 target_link_libraries (steinertest graph sttree)
+
+add_executable (test_properties teste_properties.cpp 
+		properties.h properties.cpp
+		${includes})
+target_link_libraries (test_properties graph)
 
