--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,9 @@ add_subdirectory (statistics)
 add_subdirectory (mpp_algorithms)
 add_subdirectory (util)
 
+#directory for test of libraries and some mpp_algorithms
+add_subdirectory (testes)
+
 INSTALL (FILES CMakeLists.txt DESTINATION .)
 INSTALL (DIRECTORY include lib DESTINATION .)
 INSTALL (DIRECTORY results DESTINATION .)
