--- a/mpp_algorithms/myalgorithm/CMakeLists.txt
+++ b/mpp_algorithms/myalgorithm/CMakeLists.txt
@@ -19,5 +19,5 @@ add_executable (test_properties teste_properties.cpp
 		strategy_make_tree.cpp strategy_make_tree.h
 		breadth_search_tree.h breadth_search_tree.cpp
 		${includes})
-target_link_libraries (test_properties graph sttree)
+target_link_libraries (test_properties graph sttree ${Boost_LIBRARIES})
 
