--- a/mpp_algorithms/myalgorithm/CMakeLists.txt
+++ b/mpp_algorithms/myalgorithm/CMakeLists.txt
@@ -21,10 +21,10 @@ add_executable (mppalgorithm
 target_link_libraries (mppalgorithm graph sttree myutil)
 
 
-#add_executable (test_properties teste_properties.cpp 
-#		properties.h properties.cpp
-#		strategy_make_tree.cpp strategy_make_tree.h
-#		breadth_search_tree.h breadth_search_tree.cpp
-#		${includes})
-#target_link_libraries (test_properties graph sttree ${Boost_LIBRARIES})
+add_executable (test_properties teste_properties.cpp 
+		properties.h properties.cpp
+		strategy_make_tree.cpp strategy_make_tree.h
+		breadth_search_tree.h breadth_search_tree.cpp
+		${includes})
+target_link_libraries (test_properties graph sttree ${Boost_LIBRARIES})
 
