--- a/mpp_algorithms/myalgorithm/CMakeLists.txt
+++ b/mpp_algorithms/myalgorithm/CMakeLists.txt
@@ -58,6 +58,7 @@ IF (TESTALGO)
 add_executable (test_properties teste_properties.cpp 
 		aco.h aco.cpp 
 		acompp.h acompp.cpp
+		ant.h ant.cpp
 		${includes})
 target_link_libraries (test_properties graph sttree ${Boost_LIBRARIES})
 ENDIF ()
