Modifications on CMakeLists for correct compilations

--- a/mpp_algorithms/CMakeLists.txt
+++ b/mpp_algorithms/CMakeLists.txt
@@ -9,3 +9,5 @@ CMakeCache*;
 
 add_subdirectory (Chen2000)
 add_subdirectory (myalgorithm)
+
+INSTALL (FILES CMakeLists.txt DESTINATION mpp_algorithms)
