--- a/stalgorithm/CMakeLists.txt
+++ b/stalgorithm/CMakeLists.txt
@@ -13,7 +13,7 @@ FILE(GLOB HDRS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
 add_library (sttalgo STATIC ${SRC})
 target_link_libraries (sttalgo sttree graph)
 
-INSTALL (FILES ${SRC} ${HDRS} CMakeLists.txt DESTINATION sttalgo)
+INSTALL (FILES ${SRC} ${HDRS} CMakeLists.txt DESTINATION stalgorithm)
 
 #install (TARGETS sttree
 #	DESTINATION lib
