data generator: gerating traffic request for each group in *.dat output

--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -10,7 +10,12 @@ CMakeCache*;
 FILE(GLOB SRC "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
 FILE(GLOB HDRS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
 
+FILE (GLOB INCLUDE "${PROJECT_SOURCE_DIR}/include/*.h")
+
 add_library (myutil STATIC ${SRC})
+
+add_executable (modelData SolverDataGenerator.cpp ${INCLUDE})
+target_link_libraries (modelData graph sttree)
 
 INSTALL (FILES ${SRC} ${HDRS} CMakeLists.txt DESTINATION util)
 
