new subdirectory added to CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ add_subdirectory (statistics)
 add_subdirectory (mpp_algorithms)
 add_subdirectory (util)
 add_subdirectory (stalgorithm)
+add_subdirectory (mmmstp)
 
 #directory for test of libraries and some mpp_algorithms
 add_subdirectory (testes)
