Glogal CmakeLists has a new parameter setted: REAL. It means that the instances uses the real values of the files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,11 @@ endif()
 set (EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/build")
 set (LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib")
 
+
+#GLOBAL SETTING OF HOW TO READ THE NETWORK
+set (REAL ON)
+message ("\nINFO: REAL=ON means Reader uses real values of instance")
+
 include_directories (${PROJECT_SOURCE_DIR})
 include_directories (include lib)
 
