--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,11 @@ set (LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib")
 
 #GLOBAL SETTING OF HOW TO READ THE NETWORK
 set (REAL OFF)
-message ("\nINFO: REAL=ON means Reader uses real values of instance")
+IF (REAL)
+	message ("\nINFO: REAL=${REAL} means Reader uses real values of instance")
+ELSE()
+	message ("\nINFO: REAL=${REAL} means Reader uses real values of instance")
+ENDIF()
 
 include_directories (${PROJECT_SOURCE_DIR})
 include_directories (include lib)
