Message of compilation info

--- a/mmmstp/CMakeLists.txt
+++ b/mmmstp/CMakeLists.txt
@@ -17,7 +17,7 @@ ELSE()
 	add_definitions (-DMODEL_UNIT)
 ENDIF()
 
-MESSAGE ("INFO: On ${CMAKE_CURRENT_SOURCE_DIR} compile info")
+MESSAGE ("\nINFO: On ${CMAKE_CURRENT_SOURCE_DIR} compile info")
 MESSAGE ("\tINFO: Compiling genetic_mmmstp using network configurated for REAL=${REAL}")
 
 INSTALL (FILES ${SRC} ${HDRS} CMakeLists.txt DESTINATION util)
