--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -14,12 +14,12 @@ FILE (GLOB INCLUDE "${PROJECT_SOURCE_DIR}/include/*.h")
 
 add_library (myutil STATIC rcatime.cpp)
 
-#SET (REAL OFF)
+MESSAGE ("\nINFO: On ${CMAKE_CURRENT_SOURCE_DIR} compile info")
 
 #used to read the values of instances as they are
 IF (REAL)
 
-	MESSAGE ( "-- modelData: COMPILATION FOR REAL VALUES OF INSTANCES(TK E CAPACITY)")
+	MESSAGE ( "\tINFO:modelData-- COMPILATION FOR REAL VALUES OF INSTANCES(TK E CAPACITY)")
 	add_definitions (-DMODEL_REAL)
 	add_executable (realModelData DataGenerator.cpp SolverDataGenerator.h SolverDataGenerator.cpp ${INCLUDE})
 	target_link_libraries (realModelData graph sttree)
@@ -27,7 +27,7 @@ IF (REAL)
 ELSE()
 #the values of capacity is equal the size of groups
 #the values of tk(traffic request) for each group is equal 1
-	MESSAGE ( "-- modelData: COMPILATION FOR VALUES OF INSTANCES(TK=1 E CAPACITY=GROUP SIZE)")
+	MESSAGE ( "\tINFO:modelData-- COMPILATION FOR VALUES OF INSTANCES(TK=1 E CAPACITY=GROUP SIZE)")
 	add_definitions (-DMODEL_UNIT)
 	add_executable (unitModelData DataGenerator.cpp SolverDataGenerator.h SolverDataGenerator.cpp ${INCLUDE})
 	target_link_libraries (unitModelData graph sttree)
