--- a/mmmstp/CMakeLists.txt
+++ b/mmmstp/CMakeLists.txt
@@ -26,3 +26,8 @@ add_executable (genetic_mmmstp 	genetic_algorithm.cpp
 								metaheuristic.h)
 target_link_libraries (genetic_mmmstp graph sttree sttalgo myutil)
 
+MESSAGE ("\tINFO: Compiling genetic_mmmstp using network configurated for REAL=${REAL}")
+add_executable (yuhchen yuhchen.cpp
+						yuhchen.h)
+target_link_libraries (yuhchen graph)
+
