wildest_path_dijkstra implemented

--- a/mmmstp/CMakeLists.txt
+++ b/mmmstp/CMakeLists.txt
@@ -29,5 +29,5 @@ target_link_libraries (genetic_mmmstp graph sttree sttalgo myutil)
 MESSAGE ("\tINFO: Compiling genetic_mmmstp using network configurated for REAL=${REAL}")
 add_executable (yuhchen yuhchen.cpp
 						yuhchen.h)
-target_link_libraries (yuhchen graph)
+target_link_libraries (yuhchen graph sttalgo sttree)
 
