AGM heuristic implemented

--- a/mmmstp/CMakeLists.txt
+++ b/mmmstp/CMakeLists.txt
@@ -40,3 +40,6 @@ MESSAGE ("\tINFO: Compiling Heuristic Algorithm based on Shortest Path")
 add_executable (spheuristic sph_heuristic.cpp ${includes})
 target_link_libraries (spheuristic graph sttalgo sttree myutil)
 
+MESSAGE ("\tINFO: Compiling Heuristic Algorithm based on AGM")
+add_executable (agmheuristic agm_heuristic.cpp ${includes})
+target_link_libraries (agmheuristic graph sttalgo sttree myutil)
