--- a/mmmstp/CMakeLists.txt
+++ b/mmmstp/CMakeLists.txt
@@ -48,7 +48,7 @@ add_executable (agmheuristic agm_heuristic.cpp ${includes})
 target_link_libraries (agmheuristic graph sttalgo sttree myutil)
 
 add_executable (tabu_test tabusearch.h tabusearch.cpp ${includes})
-target_link_libraries (tabu_test graph sttree sttalgo)
+target_link_libraries (tabu_test graph sttree sttalgo myutil)
 
 #add_executable (limite_agm limite.cpp limite.h ${includes})
 #target_link_libraries (limite_agm graph sttalgo sttree)
